--- a/week4/index.html
+++ b/week4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo 3: Proyecto Final CRUD</title>
+    <title>Módulo 3: CRUD</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
